@@ -64,6 +64,16 @@
             <name>Luis Cisneros</name>
             <email>lcisneros at stratio dot com</email>
         </developer>
+        <developer>
+            <id>pmadrigal</id>
+            <name>Pedro Madrigal</name>
+            <email>pmadrigal at stratio dot com</email>
+        </developer>
+        <developer>
+            <id>ccaballe</id>
+            <name>Cristian Caballero</name>
+            <email>ccaballero at stratio dot com</email>
+        </developer>
     </developers>
 
     <modules>
@@ -90,7 +100,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <outputFileName>stratio-crossdata</outputFileName>
-        <mysql.version>5.1.36</mysql.version>
+        <mariadb.version>1.2.3</mariadb.version>
+        <postgresql.version>9.3-1104-jdbc4</postgresql.version>
+        <derby.version>10.12.1.1</derby.version>
         <jackson4s.version>3.2.11</jackson4s.version>
 
     </properties>
@@ -180,6 +192,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
+                <configuration>
+                    <forkCount>1</forkCount>
+                    <reuseForks>false</reuseForks>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
